# pyShell

./: README.md  correct.py  login_man.py  main.py  pyproject.toml
.config/pyshell/: shell.toml  su.conf  user.conf
man/core/: cat.md  cd.md  clear.md  cli_help.md  ls.md
man/pyedit/: pyedit.md
man/pyfetch/: pyfetch.md
